--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>Minali's Boutique</title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Baskerville&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -32,10 +35,163 @@
             <button>Shop Now</button>
         </section>
         <section id="features" class="section-p1">
+            <div class="box">
             <div class="f1">
-                <img src="img/features/f1.jpeg" class="img">
+                <img src="img/features/f1.jpeg">
                 <h6>Free shipping over Rs.1299</h6>
             </div>
+            <div class="f1">
+                <img src="img/features/f2.jpeg">
+                <h6>Online Order</h6>
+            </div>
+            <div class="f1">
+                <img src="img/features/f3.jpeg">
+                <h6>Save Money</h6>
+            </div>
+            <div class="f1">
+                <img src="img/features/f4.jpeg">
+                <h6>Happy Sell</h6>
+            </div>
+            <div class="f1">
+                <img src="img/features/f5.jpeg">
+                <h6>24/7 Custormer support</h6>
+            </div>
+            </div>
+        </section>
+        <section id="featured-items" class="section-p1">
+            <h2>Featured Products</h2>
+            <p>A New Summer Collection</p>
+            <div class="product-container">
+                <div class="product">
+                    <img src="img/products/f1.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Cartoon Astronaut T-shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f2.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Leaf pattern T-shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f3.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Floral-type1 T-shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f4.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Floral-type2 T-shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f5.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Purple-bloom T-shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1299</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f6.jpg">
+                    <div class="desc">
+                        <span>VanHeusan</span>
+                        <h5>Street Style Shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1499</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f7.jpg">
+                    <div class="desc">
+                        <span>WeDressForUs</span>
+                        <h5>Floral-pattern Pants</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1999</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/f8.jpg">
+                    <div class="desc">
+                        <span>WeDressForUs</span>
+                        <h5>Classy-pattern Top</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1299</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+
         </section>
         <script src="script.js"></script>
     </body>
