--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <section id="header">
-            <a href=""><img class = "logo" src="" alt="Minali's Boutique logo"></a>
+            <a href=""><img class = "logo" src="img/logo.png" alt="Minali's Boutique logo"></a>
             
             <div>
                 <ul id="navbar">
