--- a/index.html
+++ b/index.html
@@ -193,6 +193,161 @@
             </div>
 
         </section>
+        <section id="banner" class="section-m1">
+            <h4>Offers valid only till 19 October</h4>
+            <h2>Up to <span>70% Off</span>-All T-shirts and Accessories</h2>
+            <button>Explore More</button>
+        </section>
+        <section id="featured-items" class="section-p1">
+            <h2>
+                New Arrivals
+            </h2>
+            <p>A Unique Collection for unique you</p>
+            <div class="product-container">
+                <div class="product">
+                    <img src="img/products/n1.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Formal plain shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n2.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Formal lining shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n3.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Formal shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 2599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n4.jpg">
+                    <div class="desc">
+                        <span>ADIDAS</span>
+                        <h5>Sand Dunes Shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1599</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n5.jpg">
+                    <div class="desc">
+                        <span>VanHeusan</span>
+                        <h5>Street Style Shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 3299</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n6.jpg">
+                    <div class="desc">
+                        <span>VanHeusan</span>
+                        <h5>Capree</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 2499</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n7.jpg">
+                    <div class="desc">
+                        <span>WeDressForUs</span>
+                        <h5>Brown Shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 1999</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="product">
+                    <img src="img/products/n8.jpg">
+                    <div class="desc">
+                        <span>WeDressForUs</span>
+                        <h5>Classy Shirt</h5>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>Rs. 2299</h4>
+                    </div>
+                    <a href="#"><i class = "fal fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+        </section>
+        <section id="more-banners" class="section-p1">
+            <div class="banner-1">
+                <h4>Limited Time Deals</h4>
+                <h3>BUY 1 GET 1</h3>
+                <p>Only on <span>#WeDressForUs</span></p>
+                <button>learn more</button>
+            </div>
+            <div class="banner-2">
+                <h4>Limited Offers</h4>
+                <h3>On all Accessories</h3>
+                <p>Only on <span>#WeDressForUs</span></p>
+                <button>learn more</button>
+            </div>
+        </section>
         <script src="script.js"></script>
     </body>
 
